objects/P_L_Event1__e.object
<CustomObject>
    <fields>
        <fullName>Deal_Opportunity_c__c</fullName>
        <label>Deal_Opportunity__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordID_c__c</fullName>
        <label>RecordID__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_c__c</fullName>
        <label>Status__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>P_L_Event1</label>
    <pluralLabel>P_L_Events1</pluralLabel>
</CustomObject>